continued build on second option login

--- a/index-2.html
+++ b/index-2.html
@@ -73,7 +73,7 @@ $(document).ready(function() {
         $('.signUpModal').hover(function(e) {
         e.preventDefault();
         e.stopPropagation();
-        $("img").toggleClass("");
+        $("img").toggleClass("keyIn ");
     });
 
 });
