added modal positioning and additional styles

--- a/index-2.html
+++ b/index-2.html
@@ -38,7 +38,7 @@
                 <label for="textPassword">Password</label>
             </div>
             <div>
-                <button id="btn-Login"><img src="public/images/key_solid.svg" class="key" alt="Key to unlock"> Log in </button>
+                <button id="btn-Login form-row"><img src="public/images/key_solid.svg" class="key" alt="Key to unlock"> Log in </button>
             </div>
             <div>
                 <button id="btn-SignUp" class="btn-style"> Sign me up </button>
